theme/custom.scss
/*!
 * Copyright © 2022 United States Government as represented by the Administrator
 * of the National Aeronautics and Space Administration. No copyright is claimed
 * in the United States under Title 17, U.S. Code. All Other Rights Reserved.
 *
 * SPDX-License-Identifier: NASA-1.3
 */

@import 'styles';

/*
 * Size and position the NASA meatball logo in the header. 
 */

#site-logo {
  height: 2em;
  padding-right: 0.25em;
}

@media all and (max-width: 64em) {
  #site-logo {
    vertical-align: middle;
  }
}

@media all and (min-width: 64em) {
  .usa-header--basic .usa-navbar {
    width: 50%;
  }

  #site-title {
    display: inline-block;
    max-width: 70%;
  }
}

/*
 * Without this, the mobile nav menu button seems to extend one pixel below
 * the header.
 */

.usa-header--dark .usa-navbar {
  border-bottom-color: color('ink');
}

/*
 * Pin the footer to the bottom of the screen.
 * See https://css-tricks.com/a-clever-sticky-footer-technique/
 */

.usa-identifier {
  position: sticky; /* instead of absolute */
  top: 100vh;
}

html,
body {
  height: 100%;
}

/*
 * Set heading font to Helvetica
 */

@for $i from 1 through 6 {
  h#{$i} > a {
    font-family: family('lang');
  }
}

.usa-footer__logo-heading {
  font-family: family('lang');
}

/*
 * Hover link indicator for headings (like in GitHub's display of Markdown)
 */

@for $i from 1 through 6 {
  h#{$i} > a {
    color: inherit;
    text-decoration: none;
  }

  h#{$i} > a:hover::before {
    content: url('../img/usa-icons/link.svg');
    position: relative;
    float: left;
    width: 0;
    right: 30px;
  }
}

/*
 * Background color for code samples
 */

code,
code.hljs {
  @extend .bg-base-lightest;
}

/*
 * Styling for external links
 */

a[rel~='external'] {
  @extend .usa-link--external;
}

/*
 * Active nav links
 */

.active {
  @extend .usa-current;
}

/*
 * Disabled link visited color in contact links
 */

.contact-link a:visited {
  @include u-text($theme-link-color);
}

/*
 * Styles for notice cards
 */

.notice-card:hover .usa-card__container {
  @include u-border('ink');
}

.notice-card {
  text-decoration: none;
}

/*
 * Accented cards
 */

.card-accent-cool {
  & .usa-card__container {
    @include u-border('accent-cool');
    @include u-bg('accent-cool');
  }

  & .usa-card__body {
    @include u-bg('white');
  }
}

/*
 * react-tag-autocomplete styles, adapted from
 * https://github.com/i-like-robots/react-tags/blob/main/example/styles.css
 */

.react-tags {
  position: relative;
  padding: 6px 0 0 6px;
  border: 1px solid #d1d1d1;
  border-radius: 1px;

  /* shared font styles */
  font-size: 1em;
  line-height: 1.2;

  /* clicking anywhere will focus the input */
  cursor: text;
}

.react-tags.is-focused {
  @include focus-outline;
}

.react-tags__selected {
  display: inline;
}

.react-tags__selected-tag {
  display: inline-block;
  box-sizing: border-box;
  margin: 0 6px 6px 0;
  padding: 6px 8px;
  border: 1px solid #d1d1d1;
  border-radius: 2px;
  background: #f1f1f1;

  /* match the font styles */
  font-size: inherit;
  line-height: inherit;
}

.react-tags__selected-tag:after {
  content: '\2715';
  color: #aaa;
  margin-left: 8px;
}

.react-tags__selected-tag:hover,
.react-tags__selected-tag:focus {
  border-color: #b1b1b1;
}

.react-tags__search {
  display: inline-block;

  /* match tag layout */
  padding: 7px 2px;
  margin-bottom: 6px;

  /* prevent autoresize overflowing the container */
  max-width: 100%;
}

@media screen and (min-width: 30em) {
  .react-tags__search {
    /* this will become the offsetParent for suggestions */
    position: relative;
  }
}

.react-tags__search-input,
input.react-tags__search-input:focus {
  /* prevent autoresize overflowing the container */
  max-width: 100%;

  /* remove styles and layout from this element */
  margin: 0;
  padding: 0;
  border: 0;
  outline: none;

  /* match the font styles */
  font-size: inherit;
  line-height: inherit;
}

.react-tags__search-input::-ms-clear {
  display: none;
}

.react-tags__suggestions {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: z-index(100);
}

@media screen and (min-width: 30em) {
  .react-tags__suggestions {
    width: 240px;
  }
}

.react-tags__suggestions ul {
  margin: 4px -1px;
  padding: 0;
  list-style: none;
  background: white;
  border: 1px solid #d1d1d1;
  border-radius: 2px;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
}

.react-tags__suggestions li {
  border-bottom: 1px solid #ddd;
  padding: 6px 8px;
}

.react-tags__suggestions li mark {
  text-decoration: underline;
  background: none;
  font-weight: 600;
}

.react-tags__suggestions li:hover {
  cursor: pointer;
  background: #eee;
}

.react-tags__suggestions li.is-active {
  background: #b7cfe0;
}

.react-tags__suggestions li.is-disabled {
  opacity: 0.5;
  cursor: auto;
}

/*
 * Styling for the tab component
 */

.tabs-component [role='tablist'] {
  display: flex;
  flex-wrap: wrap;
  border-bottom: 1px solid #dee2e6;
  position: relative;
}

.tabs-component [role='tablist'] button {
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  display: block;
  padding: 0.5rem 1rem;
  cursor: pointer;
  margin: 0 1px;
  outline: none;
  background-color: #fff;
  transition: border 0.2s ease-in-out 0s;
}

.tabs-component [role='tablist'] button.active,
.tabs-component [role='tablist'] button:focus,
.tabs-component [role='tablist'] button:hover {
  border-width: 1px;
  border-color: #e9ecef #e9ecef #b41c1c;
}

.tabs-component [role='tablist'] button.active {
  color: #495057;
  background-color: #f8f8f8;
}

.tabs-component [role='tabpanel'] {
  text-align: left;
  padding: 1rem;
  background-color: #f8f8f8;
  box-shadow: 1px 1px 2px rgb(204 204 204 / 75%);
}

.tabs-component.vertical {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
}

.tabs-component.vertical [role='tablist'] {
  flex-direction: column;
}

.tabs-component.vertical [role='tabpanel'] {
  flex: 1;
}

.tabs-component [role='tablist'] button {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  margin: 0;
}

.tabs-component.vertical [role='tablist'] button.active,
.tabs-component.vertical [role='tablist'] button:focus,
.tabs-component.vertical [role='tablist'] button:hover {
  border-color: #e9ecef transparent #e9ecef #b41c1c;
}

/*
 * Client credential cards
 */

.segmented-card-headline h3,
.segmented-card-headline p,
.segmented-card-headline small {
  display: inline;
  vertical-align: bottom;
}

.segmented-card-headline h3 {
  font-weight: bold;
}

.client-cred-card-centered {
  display: flex;
  align-items: center;
  justify-content: center;
}

/*
 * Indeterminate checkboxes
 */

.usa-checkbox__input:indeterminate {
  &:not(:disabled) {
    @include format-input {
      @include add-background-svg('../../img/checkbox-indeterminate');
      background-size: 75%;
      background-position: center;
      background-color: #0050d8;
      box-shadow: 0 0 0 2px #0050d8;
    }
  }
  &:disabled {
    @include format-input {
      @include add-background-svg('../../img/checkbox-indeterminate');
      background-size: 75%;
      background-position: center;
      background-color: rgba(27, 27, 27, 0.3);
    }
  }
}

/*
 * Nested checkboxes
 */

.nested-checkboxes__node {
  list-style: url('../img/usa-icons/chevron_right.svg');
}

.nested-checkboxes__node[aria-expanded='true'] {
  list-style: url('../img/usa-icons/expand_more.svg');
}

.nested-checkboxes__leaf {
  list-style: none;
}

.nested-checkboxes__node [data-testid='checkbox'] {
  position: relative;
  top: -0.25rem;
  display: inline-block;
}

.nested-checkboxes__node label {
  margin-top: 0;
  margin-bottom: 0.5rem;
}

/*
 * Spinner styling
 */

.loader,
.loader:after {
  border-radius: 50%;
  width: 10em;
  height: 10em;
}
.loader {
  margin: 60px auto;
  font-size: 10px;
  position: relative;
  text-indent: -9999em;
  border-top: 1.1em solid rgba(0, 80, 216, 0.2);
  border-right: 1.1em solid rgba(0, 80, 216, 0.2);
  border-bottom: 1.1em solid rgba(0, 80, 216, 0.2);
  border-left: 1.1em solid #0050d8;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: load8 1.1s infinite linear;
  animation: load8 1.1s infinite linear;
}
@-webkit-keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

/*
 Hero formatting
*/

.hero-image-right {
  object-fit: scale-down;
}
h1.usa-hero__heading > p {
  margin-top: 0;
}

/*
  General Responsiveness in missions page
*/
a {
  word-break: break-word;
}

.overflow-table {
  overflow-x: scroll;
}

/* 
  Bottom aligned header rows 
*/
.bottom-aligned {
  display: inline;
  vertical-align: bottom;
}

/*
  Fully span the row width for segmented columns
*/
.full-width-span {
  flex: 1 1 100%;
}
/*
  Generic display flex for when necessary
*/
.display-flex {
  display: flex;
}

